Add visual servo server to controls

--- a/catkin_ws/src/auv_msgs/CMakeLists.txt
+++ b/catkin_ws/src/auv_msgs/CMakeLists.txt
@@ -18,6 +18,7 @@ add_message_files(
   SolenoidCommands.msg
   TDOAs.msg
   AcousticServo.msg
+  VisualServo.msg
 
   #added by State Estimation
   RangeBearingElevation.msg
@@ -47,6 +48,7 @@ add_action_files(
   SetCVTarget.action
   InitializeHorizon.action
   AcousticServo.action
+  VisualServo.action
 )
 
 generate_messages(DEPENDENCIES
