--- a/catkin_ws/src/sonar_proc/package.xml
+++ b/catkin_ws/src/sonar_proc/package.xml
@@ -1,24 +1,20 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>sonar_proc</name>
-  <version>0.0.0</version>
+  <version>0.1.0</version>
   <description>The sonar_proc package</description>
-  <maintainer email="brennan@todo.todo">brennan</maintainer>
+  <maintainer email="jbpavlasek@gmail.com">Jana Pavlasek</maintainer>
   <license>TODO</license>
+
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>roscpp</build_depend>
-  <build_depend>pcl_ros</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_depend>rospy</build_depend>
-  <!-- <build_depend>libpcl-all-dev</build_depend> -->
+  <build_depend>libpcl-all-dev</build_depend>
+  <build_depend>boost</build_depend>
 
-  <run_depend>roscpp</run_depend>
-  <run_depend>rospy</run_depend>
-  <run_depend>pcl_ros</run_depend>
-  <run_depend>sensor_msgs</run_depend>
-  <run_depend>std_msgs</run_depend>
-<!--   <run_depend>libpcl-all</run_depend>
- -->
+  <depend>roscpp</depend>
+  <depend>rospy</depend>
+  <depend>pcl_ros</depend>
+  <depend>std_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>libpcl-all</depend>
 </package>
