--- a/catkin_ws/src/state_estimation/CMakeLists.txt
+++ b/catkin_ws/src/state_estimation/CMakeLists.txt
@@ -26,7 +26,7 @@ find_package(Boost REQUIRED COMPONENTS)
 
 ## Have to put this in a separate find_package because we need to
 ## find cmake_modules first
-find_package(Eigen REQUIRED)
+find_package(Eigen3 REQUIRED)
 
 catkin_package(
   CATKIN_DEPENDS
