--- a/catkin_ws/src/taskr/tasks/maneuver.yaml
+++ b/catkin_ws/src/taskr/tasks/maneuver.yaml
@@ -1,4 +1,4 @@
-# MANUEVER TASK
+# MANEUVER TASK
 # Manuever with feedback. Might want to do something fancy at the end for
 # style points!
 actions:
