--- a/catkin_ws/src/taskr/tasks/octagon.yaml
+++ b/catkin_ws/src/taskr/tasks/octagon.yaml
@@ -1,4 +1,4 @@
 # OCTAGON TASK
 # Search for octogon using hydrophones.
 actions:
-  - acoustic-servo: "hydrophones"
+  - acoustic_servo: "hydrophones"
