--- a/catkin_ws/src/taskr/tasks/bins.yaml
+++ b/catkin_ws/src/taskr/tasks/bins.yaml
@@ -2,10 +2,8 @@
 # Drop marker in bins.
 actions:
   - move:
-      position:
-        x: 0
-        y: 5
-        z: 1
+      distance: 10
+      depth: 2
       yaw: 0.0
       feedback: False
   - visual_servo: "bins"
