--- a/catkin_ws/src/taskr/tasks/buoys.yaml
+++ b/catkin_ws/src/taskr/tasks/buoys.yaml
@@ -2,9 +2,7 @@
 # Move to buoys. Move to specific colour and pull down buoy are options.
 actions:
   - move:
-      position:
-        x: 0
-        y: 5
-        z: 1
+      distance: 10
+      depth: 2
       yaw: 0.0
       feedback: True
