--- a/catkin_ws/src/taskr/tasks/gate.yaml
+++ b/catkin_ws/src/taskr/tasks/gate.yaml
@@ -2,9 +2,7 @@
 # The gate is a purely dead reckoning task.
 actions:
   - move:
-      position:
-        x: 0
-        y: 5
-        z: 1
+      distance: 10
+      depth: 2
       yaw: 0.0
       feedback: False
