--- a/catkin_ws/src/taskr/tasks/maneuver.yaml
+++ b/catkin_ws/src/taskr/tasks/maneuver.yaml
@@ -3,9 +3,7 @@
 # style points!
 actions:
   - move:
-      position:
-        x: 0
-        y: 5
-        z: 1
+      distance: 10
+      depth: 2
       yaw: 0.0
       feedback: True
