--- a/catkin_ws/src/planner/package.xml
+++ b/catkin_ws/src/planner/package.xml
@@ -9,6 +9,7 @@
   <license>GPLv3</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+
   <build_depend>actionlib</build_depend>
   <run_depend>actionlib</run_depend>
   <build_depend>actionlib_msgs</build_depend>
@@ -18,4 +19,6 @@
   <build_depend>std_msgs</build_depend>
   <run_depend>std_msgs</run_depend>
 
+  <export>
+  </export>
 </package>
