Publish task status

--- a/catkin_ws/src/auv_msgs/CMakeLists.txt
+++ b/catkin_ws/src/auv_msgs/CMakeLists.txt
@@ -11,7 +11,7 @@ find_package(catkin REQUIRED COMPONENTS
 
 add_message_files(
   FILES
-  #added by Controls
+  # Added by Controls
   SetPosition.msg
   SetVelocity.msg
   MotorCommands.msg
@@ -19,19 +19,22 @@ add_message_files(
   TDOAs.msg
   AcousticServo.msg
 
-  #added by State Estimation
+  # Added by State Estimation
   RangeBearingElevation.msg
   SlamEstimate.msg
 
-  #added by CV
+  # Added by CV
   CVTarget.msg
 
-  #added by IO
+  # Added by IO
   RadioCommands.msg
   CPUTemperature.msg
 
-  #added by hydrophones
+  # Added by hydrophones
   Signals.msg
+
+  # Added by Taskr
+  TaskStatus.msg
 )
 
 add_service_files(FILES
