--- a/catkin_ws/src/controls/config/params.yaml
+++ b/catkin_ws/src/controls/config/params.yaml
@@ -15,9 +15,9 @@ kp_yHydro: 0.5e6
 ki_yHydro: 0.0
 kd_yHydro: 0.0
 
-kp_depth: 30.0
-ki_depth: 2.0
-kd_depth: 35.0
+kp_depth: 150.0
+ki_depth: 4.0
+kd_depth: 10.0
 
 kp_pitch: 1.0
 ki_pitch: 0.0
@@ -35,3 +35,8 @@ kd_yaw: 5.0
 
 surge_coeff: 5
 sway_coeff: 5
+
+yaw_error_tol: 0.1  # radians
+x_error_tol: 0.05  # m
+y_error_tol: 0.05  # m
+depth_error_tol: 0.05  #m
