Add action field and clean up

--- a/catkin_ws/src/planner/package.xml
+++ b/catkin_ws/src/planner/package.xml
@@ -4,7 +4,7 @@
   <version>0.1.0</version>
   <description>The McGill Robotics planner package</description>
 
-  <maintainer email="mr@anassinator.com">Anass Al</maintainer>
+  <maintainer email="jbpavlasek@gmail.com">Jana Pavlasek</maintainer>
 
   <license>GPLv3</license>
 
