--- a/catkin_ws/src/taskr/tasks/octagon.yaml
+++ b/catkin_ws/src/taskr/tasks/octagon.yaml
@@ -2,3 +2,8 @@
 # Search for octogon using hydrophones.
 actions:
   - acoustic_servo: "hydrophones"
+  - move:
+      distance: -0.5
+      depth: 0.5
+      yaw: 0.0
+      feedback: False
