--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "catkin_ws/src/ros_opentld"]
 	path = catkin_ws/src/ros_opentld
 	url = git@github.com:mcgill-robotics/ros_opentld.git
+[submodule "catkin_ws/src/pointgrey_camera_driver"]
+	path = catkin_ws/src/pointgrey_camera_driver
+	url = https://github.com/ros-drivers/pointgrey_camera_driver.git
