--- a/catkin_ws/src/taskr/tasks/course_a.yaml
+++ b/catkin_ws/src/taskr/tasks/course_a.yaml
@@ -2,7 +2,7 @@
 initialize:
   actions:
     - initialize:
-        countdown: 5 
+        countdown: 5
         drift_check: 2
 
 # GATE TASK
@@ -10,8 +10,8 @@ initialize:
 gate:
   actions:
     - move:
-        distance: 10
-        depth: 2
+        distance: 15
+        depth: 1.2
         yaw: 0.0
         feedback: False
 
@@ -81,20 +81,7 @@ octagon:
 square:
   actions:
     - move:
-        distance: 3
-        depth: 0.5
+        distance: 6
+        depth: 1
         yaw: 0
-    - move:
-        distance: -3
-        depth: 0.5
-        yaw: 0
-    - move:
-        distance: 1
-        depth: 0.5
-        yaw: 0
-        sway: True
-    - move:
-        distance: -1
-        depth: 0.5
-        yaw: 0
-        sway: True
+        feedback: False
