--- a/catkin_ws/src/taskr/tasks/threesixty.yaml
+++ b/catkin_ws/src/taskr/tasks/threesixty.yaml
@@ -2,8 +2,8 @@
 initialize:
   actions:
     - initialize:
-        countdown: 5 
-        drift_check: 2
+        countdown: 10
+        drift_check: 3
 
 # GATE TASK
 # The gate is a purely dead reckoning task.
@@ -81,20 +81,23 @@ octagon:
 square:
   actions:
     - move:
-        distance: 3
+        distance: 0
         depth: 0.5
         yaw: 0
     - move:
-        distance: -3
+        distance: 0
         depth: 0.5
-        yaw: 0
+        yaw: 1.04
     - move:
-        distance: 1
+        distance: 0
         depth: 0.5
-        yaw: 0
-        sway: True
-    - move:
-        distance: -1
+        yaw: 2.094
+    - move: 
+        distance: 0
         depth: 0.5
-        yaw: 0
-        sway: True
+        yaw: 3.9
+    - move: 
+        distance: 0
+        depth: 0.5
+        yaw: -0.1
+
