--- a/catkin_ws/src/taskr/tasks/course_c_as.yaml
+++ b/catkin_ws/src/taskr/tasks/course_c_as.yaml
@@ -69,6 +69,9 @@ torpedo:
 square:
   actions:
     - move:
-        distance: -2
-        depth: 1.2
-        sway: True
+        distance: 1
+        depth: 0.5
+    - spinny: spin
+    - move:
+        distance: 1
+        depth: 0.5
