--- a/catkin_ws/src/taskr/tasks/course_c_as.yaml
+++ b/catkin_ws/src/taskr/tasks/course_c_as.yaml
@@ -70,8 +70,9 @@ square:
   actions:
     - move:
         distance: 1
-        depth: 0.5
+        depth: 0.3
+        yaw: 0
     - spinny: spin
     - move:
         distance: 1
-        depth: 0.5
+        depth: 0.3
