Add wait and clean up yamls

--- a/catkin_ws/src/planner/config/cond_tasks_ad.yaml
+++ b/catkin_ws/src/planner/config/cond_tasks_ad.yaml
@@ -7,11 +7,19 @@ tasks:
       right_tasks:
         - name: OCTAGON
           server: octagon_task
+        - name: WAIT
+          server: wait
         - name: BIN
           server: bin_task
+        - name: TORPEDO
+          server: torpedo_task
       left_tasks:
         - name: BIN
           server: bin_task
+        - name: TORPEDO
+          server: torpedo_task
+        - name: WAIT
+          server: wait
         - name: OCTAGON
           server: octagon_task
     transitions:
