--- a/catkin_ws/src/planner/config/cond_tasks_ad.yaml
+++ b/catkin_ws/src/planner/config/cond_tasks_ad.yaml
@@ -1,6 +1,12 @@
 tasks:
   - name:  INITIALIZE  # name of the state
     server: initialize_task  # name of the action server
+  - name: GATE
+    server: gate_task
+  - name: BUOY
+    server: buoy_task
+  - name: MANEUVER
+    server: maneuver_task
   - name: CONDITIONAL
     server: hydro_choose_task
     results:
