Set up for kiddie pool wait test

--- a/catkin_ws/src/taskr/tasks/course_d_as.yaml
+++ b/catkin_ws/src/taskr/tasks/course_d_as.yaml
@@ -80,7 +80,7 @@ square:
         distance: 1
         depth: 0.3
         yaw: 0
-    - spinny: spin
-    - move:
-        distance: 1
-        depth: 0.3
+    # - spinny: spin
+    # - move:
+    #     distance: 1
+    #     depth: 0.3
