--- a/catkin_ws/src/taskr/tasks/course_b_as.yaml
+++ b/catkin_ws/src/taskr/tasks/course_b_as.yaml
@@ -10,7 +10,7 @@ initialize:
 gate:
   actions:
     - move:
-        distance: 10  # 13.8
+        distance: 9  # 13.8
         depth: 1.2
         yaw: 0.0
 
@@ -18,30 +18,36 @@ gate:
 buoy:
   actions:
     - move:  # Move close to the buoys
-        distance: 4  # 5.87
-        depth: 1.2
-        yaw: 0.122
+        distance: 6  # 5.87
+        depth: 1.5
+        yaw: 0.0
 
 # MANEUVER TASK
 # Maneuver with feedback. Might want to do something fancy at the end for
 # style points!
 maneuver:
   actions:
-    - move:
-        distance: 7
-        depth: 1.2
-        yaw: 0.07
+    - move: # move to maneuver
+        distance: 11
+        depth: 1.7
+        yaw: -0.698
     - spinny: spin!
-    - move:
-        distance: 0
+    - move: # go through
+        distance: 3
+        depth: 1.7
+        yaw: 0.175
+    - move: # last turn
+        distance: 4
         depth: 1.2
-        yaw: 0.15
+        yaw: 1.047
 
 # OCTAGON TASK
 # Search for octogon using hydrophones.
 octagon:
   actions:
     - acoustic_servo: "hydrophones"
+    - move:
+        distance: -0.6
     - move:
         distance: 0
         depth: 0.1
@@ -54,6 +60,14 @@ bins:
         distance: 0
         depth: 1.2
     - acoustic_servo: "hydrophones"
+    - move:
+        distance: -1.0
+        depth: 1.2
+    - shoot: port_dropper
+    - move:
+        distance: 0.8
+        depth: 1.2
+    - shoot: starboard_dropper
 
 # TORPEDO TASK
 # Move to torpedos and then shoot.
@@ -61,8 +75,14 @@ torpedo:
   actions:
     - move:
         distance: 0
-        depth: 1.2
+        depth: 1.7
         yaw: 1.57
+    - shoot: port_torpedo
+    - move:
+        distance: 0
+        depth: 1.3
+        yaw: 1.57
+    - shoot: starboard_torpedo
 
 # TEST TASK
 # Represents any series of actions for testing purposes.
