--- a/catkin_ws/src/planner/config/sandbox.yaml
+++ b/catkin_ws/src/planner/config/sandbox.yaml
@@ -1,9 +1,7 @@
 tasks:
-  - name:  INITIALIZE  # name of the state
+  - name:  INITIALIZE  # name of the state     
     server: initialize_task  # name of the action server
-  - name: SQUARE
-    server: square_task
-  - name: WAIT
-    server: wait
-  - name: SQUARE2
-    server: square_task
+  - name: BUOY
+    server: buoy_task
+  - name: MANEUVER
+    server: maneuver_task
