--- a/catkin_ws/src/state_estimation/pose/CMakeLists.txt
+++ b/catkin_ws/src/state_estimation/pose/CMakeLists.txt
@@ -1,3 +1,21 @@
-include_directories(include ${catkin_INCLUDE_DIRS})
-add_executable(XimuPublisher src/XimuPublisher.cpp src/XimuReceiver.cpp)
-target_link_libraries(XimuPublisher ${catkin_LIBRARIES})
+include_directories(
+    include
+    ${catkin_INCLUDE_DIRS}
+)
+
+add_executable(XimuPublisher
+    src/XimuPublisher.cpp
+    src/XimuReceiver.cpp
+)
+
+add_executable(doubleIntPose
+    src/doubleIntPose.cpp
+)
+
+target_link_libraries(doubleIntPose
+    ${catkin_LIBRARIES}
+)
+
+target_link_libraries(XimuPublisher
+    ${catkin_LIBRARIES}
+)
