Init and rename files to convention

--- a/catkin_ws/src/auv_gazebo/package.xml
+++ b/catkin_ws/src/auv_gazebo/package.xml
@@ -1,27 +1,29 @@
 <?xml version="1.0"?>
 <package>
-  <name>simulator</name>
+  <name>auv_gazebo</name>
   <version>0.0.0</version>
-  <description>The AUV simulator package</description>
-  <maintainer email="yichi.zhang@mail.mcgill.ca">Yichi Zhang</maintainer>
+  <description>The auv_gazebo package</description>
+  <maintainer email="yichiz@todo.todo">yichiz</maintainer>
   <license>BSD</license>
+
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>auv_msgs</build_depend>
   <build_depend>gazebo_plugins</build_depend>
   <build_depend>gazebo_ros</build_depend>
   <build_depend>geometry_msgs</build_depend>
-  <build_depend>roscpp</build_depend>
+  <build_depend>robot_state_publisher</build_depend>
   <build_depend>rospy</build_depend>
+  <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>tf</build_depend>
-  <run_depend>auv_msgs</run_depend>
   <run_depend>gazebo_plugins</run_depend>
   <run_depend>gazebo_ros</run_depend>
   <run_depend>geometry_msgs</run_depend>
-  <run_depend>roscpp</run_depend>
+  <run_depend>robot_state_publisher</run_depend>
   <run_depend>rospy</run_depend>
+  <run_depend>sensor_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>tf</run_depend>
+
   <export>
   </export>
 </package>
