--- a/catkin_ws/src/sonar_proc/package.xml
+++ b/catkin_ws/src/sonar_proc/package.xml
@@ -8,11 +8,12 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>libpcl-all-dev</build_depend>
-  <build_depend>message_generation</build_depend>
-  <build_depend>geometry_msgs</build_depend>
-    
-  <exec_depend>geometry_msgs</exec_depend>
-  <exec_depend>message_generation</exec_depend>
+
+  <depend>geometry_msgs</depend>
+  <depend>message_generation</depend>
+  <depend>pcl_ros</depend>
+  <depend>pcl_msgs</depend>
+  <depend>pcl_conversions</depend>
 
   <depend>message_runtime</depend>
   <depend>libpcl-all</depend>
