Update CMakeLists.txt and package.xml

--- a/catkin_ws/src/auv_gazebo/package.xml
+++ b/catkin_ws/src/auv_gazebo/package.xml
@@ -3,7 +3,7 @@
   <name>auv_gazebo</name>
   <version>0.0.0</version>
   <description>The auv_gazebo package</description>
-  <maintainer email="yichiz@todo.todo">yichiz</maintainer>
+  <maintainer email="yichi.zhang@mail.mcgill.ca">Yichi Zhang</maintainer>
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
