--- a/catkin_ws/src/state_estimation/package.xml
+++ b/catkin_ws/src/state_estimation/package.xml
@@ -12,6 +12,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>cv_bridge</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>nav_msgs</build_depend>
@@ -23,11 +24,13 @@
   <build_depend>tf_conversions</build_depend>
   <build_depend>eigen_conversions</build_depend>
 
+
   <test_depend>unittest</test_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
+  <run_depend>cv_bridge</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
