--- a/catkin_ws/src/auv_gazebo/package.xml
+++ b/catkin_ws/src/auv_gazebo/package.xml
@@ -7,21 +7,19 @@
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>auv_msgs</build_depend>
   <build_depend>gazebo_plugins</build_depend>
   <build_depend>gazebo_ros</build_depend>
-  <build_depend>geometry_msgs</build_depend>
+  <build_depend>gazebo_msgs</build_depend>
   <build_depend>robot_state_publisher</build_depend>
   <build_depend>rospy</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>std_msgs</build_depend>
   <build_depend>tf</build_depend>
+  <run_depend>auv_msgs</run_depend>
   <run_depend>gazebo_plugins</run_depend>
   <run_depend>gazebo_ros</run_depend>
-  <run_depend>geometry_msgs</run_depend>
+  <run_depend>gazebo_msgs</run_depend>
   <run_depend>robot_state_publisher</run_depend>
   <run_depend>rospy</run_depend>
-  <run_depend>sensor_msgs</run_depend>
-  <run_depend>std_msgs</run_depend>
   <run_depend>tf</run_depend>
 
   <export>
