Add new TaskPoint msg, make task_point more efficient, make task_point testable

--- a/catkin_ws/src/auv_msgs/CMakeLists.txt
+++ b/catkin_ws/src/auv_msgs/CMakeLists.txt
@@ -34,6 +34,10 @@ add_message_files(
 
   # Added by Taskr
   TaskStatus.msg
+
+  # Added by Sonar
+  TaskPointsArray.msg
+
 )
 
 add_service_files(FILES
