create torpedo target detector

--- a/catkin_ws/src/auv_msgs/CMakeLists.txt
+++ b/catkin_ws/src/auv_msgs/CMakeLists.txt
@@ -22,6 +22,7 @@ add_message_files(
   RangeBearingElevation.msg
   SlamEstimate.msg
   Lane.msg
+  TorpedoTarget.msg
 
   # Added by CV
   CVTarget.msg
