--- a/catkin_ws/src/state_estimation/detectors/CMakeLists.txt
+++ b/catkin_ws/src/state_estimation/detectors/CMakeLists.txt
@@ -1,3 +1,6 @@
 include_directories(. ${catkin_INCLUDE_DIRS})
 add_executable(lane_detector laneDetector.cpp)
+add_executable(torpedo_target torpedoTargeter.cpp)
 target_link_libraries(lane_detector ${catkin_LIBRARIES})
+target_link_libraries(torpedo_target ${catkin_LIBRARIES})
+
