Rename lane_detector module

--- a/catkin_ws/src/state_estimation/detectors/CMakeLists.txt
+++ b/catkin_ws/src/state_estimation/detectors/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_executable(lane_detector laneDetector.cpp)
+add_executable(lane_detector lane_detector.cpp)
 target_link_libraries(lane_detector ${catkin_LIBRARIES})
