Controls/actionlib refactor (#284)
* Make PID gains zero so we don't assume anything. Also, lower the integrator max/min - this should help with windup

* WIP: Refactor to actionlib server style

* Use yaml instead of json

* Add setters for superimposer members

* Add the PID params to the PID file so there's a central place to reference them

* Comment the process code

* Consolidate the maintainer code to make it DRYer

* Implement Actionlib for running controls

* Add nodes that fake tf frames. Should be helpful for testing

* Refactor thrust_mapper to only load t100 characterizations once. Improve comments in thrust_mapper

* Fix multiplication by None error

* Remove sleep that only existed for testing purposes

* Improve commenting in thrust mapper

* Add a function that wipes a long living PID's memory

* Make the gotodepthserver autostart:

* Remove boilerplate comments

* Fix error where depth server was updating to quickly

* Make gains required args to PID controller

* Remove unused pid launch file

* Address the percieved deficiencies of derived categories

* Remove absolute path to rosparam

* Add _timer as a member to Process

- This way, callers of start won't have to be concerned about handling the
timer object.

- Also moved the callback function inside Maintainer's start to
it's own method. This way we don't need to re-build the function
everytime start is called

* Better naming

* Add multiple vectors to controllers

* Forgot to change message name in server

* list() does not work how I thought it did

--- a/catkin_ws/src/controls/CMakeLists.txt
+++ b/catkin_ws/src/controls/CMakeLists.txt
@@ -6,9 +6,20 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   auv_msgs
   geometry_msgs
+  genmsg
+  actionlib_msgs
+  actionlib
+)
+
+add_action_files(DIRECTORY
+    action FILES
+        GoToDepth.action
 )
 
 generate_messages(DEPENDENCIES
     geometry_msgs
     std_msgs
+    actionlib_msgs
 )
+
+add_subdirectory(test)
